# modern-intern

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  INFRASTRUCTURE.md  README.md  deploy.sh  docker-compose.yml  fly.toml  main.py  pyproject.toml
.do/: app.yaml
discord-bot/: index.js  package-lock.json  package.json
docs/: hackathon-plan.md
frontend/: index.html  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: HUD.jsx  StartScreen.jsx
frontend/src/hooks/: useSilas.js
src/: config.py  orchestrator.py  server.py
src/agents/: __init__.py  base.py  calendar_agent.py  document_agent.py  email_agent.py  meeting_agent.py  note_agent.py  search_agent.py
src/display/: base.py  web_display.py
src/services/: discord_service.py  game_brain.py  game_state.py  gemini_service.py  lyria_service.py  telegram_service.py
static/: app.js  chat.css  chat.js  mic-processor.js  style.css
templates/: camera.html  chat.html  index.html
tests/: test_gemini_chat.py  test_gemini_live.py  test_lyria_music.py  test_phone_camera.py
