[project]
name = "social-alchemist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.52.0",
    "aiohttp",
    "python-dotenv",
    "webrtcvad-wheels>=2.0.14",
    "aiosmtplib>=5.1.0",
    "aioimaplib>=2.0.1",
]

[project.optional-dependencies]
local = [
    "pyaudio",
    "opencv-python",
    "even-glasses",
    "openwakeword>=0.6.0",
    "onnxruntime>=1.24.2",
]
